[gd_scene load_steps=4 format=3 uid="uid://b5ldpcea1233j"]

[ext_resource type="Script" uid="uid://baw6r5la7qi6d" path="res://TotalWar/TotalWarScripts/Options.gd" id="1_m54s1"]
[ext_resource type="Texture2D" uid="uid://7wp4y0hbi1ee" path="res://TotalWar/Assets/ShopBackground.webp" id="2_ds3bf"]
[ext_resource type="FontFile" uid="uid://ccayte7og7sqr" path="res://Assets/I-pixel-u.ttf" id="3_d85td"]

[node name="Shop" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_m54s1")

[node name="BackgroundTexture" type="TextureRect" parent="Control"]
layout_mode = 0
offset_top = -225.0
offset_right = 1152.0
offset_bottom = 799.0
texture = ExtResource("2_ds3bf")
stretch_mode = 6

[node name="ButtonsContainer" type="HSplitContainer" parent="Control"]
layout_mode = 0
offset_left = 15.0
offset_top = 513.0
offset_right = 390.0
offset_bottom = 553.0
scale = Vector2(3, 3)
theme_override_constants/separation = 10
theme_override_constants/minimum_grab_thickness = 0

[node name="BackButton" type="Button" parent="Control/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0.939418, 0.823905, 0, 1)
theme_override_colors/font_color = Color(0.758192, 0.758192, 0.758192, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_d85td")
theme_override_font_sizes/font_size = 20
text = "BACK"

[node name="ConfirmButton" type="Button" parent="Control/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0.33458, 0.998899, 0.306519, 1)
theme_override_colors/font_color = Color(0, 29.282, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_d85td")
theme_override_font_sizes/font_size = 20
text = "CONFIRM"

[node name="OptionButtons" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 392.0
offset_top = -78.0
offset_right = 783.0
offset_bottom = 569.0
alignment = 1

[node name="Label" type="Label" parent="Control/OptionButtons"]
layout_mode = 2
theme_override_colors/font_color = Color(32.597, 28.729, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_d85td")
theme_override_font_sizes/font_size = 24
text = "NUMBER OF PLACABLE LINES:"

[node name="LineOption" type="OptionButton" parent="Control/OptionButtons"]
layout_mode = 2
icon_alignment = 1
item_count = 5
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2
popup/item_3/text = "4"
popup/item_3/id = 3
popup/item_4/text = "5"
popup/item_4/id = 4

[node name="BalanceOption" type="TextEdit" parent="Control/OptionButtons"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
placeholder_text = "ENTER THE AMOUNT OF STARTING MONEY
Default = 50"
